<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="8dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">


    <!-- Title of the report -->
        <TextView
            android:id="@+id/tvReportTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/report_title1"
            android:textSize="20sp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <TextView
            android:id="@+id/tvReportLocation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/report_location"
            android:textSize="14sp"
            android:textColor="@color/tertiary_text_color"
            android:layout_marginBottom="12dp" />

        <!-- Description of the report -->
        <TextView
            android:id="@+id/tvReportDescription"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/report_description1"
            android:textSize="16sp"
            app:layout_constraintTop_toBottomOf="@id/tvReportTitle"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerViewComments"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@id/tvReportDescription"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@id/btnAddComment"/>

        <!-- EditText for adding a new comment -->
        <EditText
            android:id="@+id/etNewComment"
            android:layout_width="250dp"
            android:layout_height="250dp"
            android:autofillHints=""
            android:hint="@string/add_a_comment"
            android:layout_margin="16dp"
            android:inputType="text"/>

        <!-- Button to submit the comment -->
        <Button
            android:id="@+id/btnAddComment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/submit_comment"
            app:layout_constraintTop_toBottomOf="@id/etNewComment"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_margin="16dp"/>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
